fixing resume component, testing render, fixing spacing, uploaded pdf and png files to src

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -16,8 +16,8 @@
 }
 
 .contact-bg {
-    width: 25px;
-    height: 100%;
+    width: 20px;
+    height: 75%;
     background-color: var(--forest);
     position: absolute;
 }
