--- a/src/components/Resume/resume.css
+++ b/src/components/Resume/resume.css
@@ -9,3 +9,36 @@
     --forest: #6E7E75;
     --black: #1A1A1D;
 }
+
+.resume {
+    display: flex;
+    height: 50vh;
+    align-items: center;
+}
+
+.resume-left {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 100vh;
+}
+
+.resume-right {
+    flex: 1;
+}
+
+.resume-card {
+    width: 60%;
+    height: 100vh;
+    border-radius: 30px;
+    position: relative;
+    overflow: hidden;
+}
+
+.resume-frame {
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
+}
